modules/network/main.tf
resource "aws_vpc" "this" {
 cidr_block = var.vpc_cidr
 enable_dns_support = true
 enable_dns_hostnames = true

 tags = {
   Name = "${var.environment}-vpc"
   Environment = var.environment
   }
}


resource "aws_subnet" "this" {
 vpc_id = aws_vpc.this.id
 cidr_block = var.subnet_cidr
 availability_zone = var.availability_zone
 map_public_ip_on_launch = true

 tags ={
  Name = "${var.environment}-subnet"
  Environment = var.environment
 }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
   Name = "${var.environment}-igw"
   Environment = var.environment
  }
}


resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.this.id
  }

  tags = {
   Name = "${var.environment}-public-rt"
   Environment = var.environment

  }
}

resource "aws_route_table_association" "this" {
  subnet_id = aws_subnet.this.id
  route_table_id = aws_route_table.public.id
  }

resource "aws_security_group" "this" {
   name = "${var.environment}-app-sg"
   description = "Allow SSH from trusted network and all outbound"
   vpc_id = aws_vpc.this.id

   ingress {
     description = "SSH"
     from_port =22
     to_port = 22
     protocol = "tcp"
     cidr_blocks = [var.ssh_allowed_cidr]
    }
    
    egress {
      description = "All outbound"
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
      }

     tags = {
        Name = "${var.environment}-app-sg"
        Environment = var.environment
     }
   }
